chgmgmt_build/src/objects/ClientNegotiation__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>クライアント</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>クライアント交渉記録</relationshipLabel>
        <relationshipName>ClientNegotiation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apply_Date__c</fullName>
        <label>適用開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commision_Percent_Result__c</fullName>
        <label>直接雇用紹介率</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commision_Percent__c</fullName>
        <label>直接雇用紹介率</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>主な競合他者</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>不明</fullName>
                </value>
                <value>
                    <fullName>リクルート</fullName>
                </value>
                <value>
                    <fullName>パーソル</fullName>
                </value>
                <value>
                    <fullName>マンパワー</fullName>
                </value>
                <value>
                    <fullName>パソナ</fullName>
                </value>
                <value>
                    <fullName>ランスタッド</fullName>
                </value>
                <value>
                    <fullName>スタッフ・サービス</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complete_Date__c</fullName>
        <label>確定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exemption__c</fullName>
        <label>除外</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>評価D</fullName>
                </value>
                <value>
                    <fullName>本人都合</fullName>
                </value>
                <value>
                    <fullName>終了予定</fullName>
                </value>
                <value>
                    <fullName>終了済</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fee_Change_Rate__c</fullName>
        <formula>Labor_Fee__c   / Staff__r.Labor_Fee_Billed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>単価改定率</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Labor_Fee_Fixed__c</fullName>
        <label>確定単価</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labor_Fee__c</fullName>
        <label>交渉単価</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Possibility__c</fullName>
        <label>付加価値型無期可能性</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>可能性なし</fullName>
                </value>
                <value>
                    <fullName>キャリアシード可能性あり</fullName>
                </value>
                <value>
                    <fullName>ProE無期可能性あり</fullName>
                </value>
                <value>
                    <fullName>SVで勤務中</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>結果</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>直雇で紹介料</fullName>
                </value>
                <value>
                    <fullName>派遣単価改定</fullName>
                </value>
                <value>
                    <fullName>キャリアシード変更</fullName>
                </value>
                <value>
                    <fullName>ProE無期変更</fullName>
                </value>
                <value>
                    <fullName>SVで無期登用</fullName>
                </value>
                <value>
                    <fullName>企業都合終了</fullName>
                </value>
                <value>
                    <fullName>アデコ都合撤退</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>スタッフ</label>
        <referenceTo>Staff__c</referenceTo>
        <relationshipLabel>クライアント交渉記録</relationshipLabel>
        <relationshipName>ClientNegotiation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>交渉開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>未着手</fullName>
                </value>
                <value>
                    <fullName>顧客検討</fullName>
                </value>
                <value>
                    <fullName>アデコ検討中</fullName>
                </value>
                <value>
                    <fullName>交渉完了</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>クライアント交渉記録</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>クライアント交渉記録名</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>クライアント交渉記録</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>